Fix quote shape on mobile (#943)
* fix mobile version of ShapeFeature

* fix alignment of feature shape

* remove bottom padding

--- a/src/ui/components/ShapeFeature/stylesheet.css
+++ b/src/ui/components/ShapeFeature/stylesheet.css
@@ -13,8 +13,9 @@
 }
 
 .container {
-  margin-bottom: 0;
-  composes: 'layout';
+  display: grid;
+  column-gap: var(--col-gap);
+  grid-column: 1/-1;
 }
 
 .content {
@@ -83,6 +84,15 @@
   :scope {
     margin: 16rem 0;
   }
+
+  .img-wrapper {
+    grid-column: 2/-2;
+    margin-left: 0;
+  }
+
+  .container {
+    grid-template-columns: var(--grid-template-columns);
+  }
 }
 
 @media (min-width: 888px) {
@@ -92,7 +102,7 @@
   }
 
   .container {
-    margin: 0;
+    grid-template-columns: var(--grid-content-columns);
   }
 
   .top {
@@ -103,11 +113,12 @@
 
   .img-wrapper {
     margin-left: -4rem;
-    grid-column: 1/5;
+    grid-column: 1/4;
   }
 
   .content {
-    grid-column: -3/5;
+    grid-column: 4/-1;
+    padding: 5rem 5rem 0 5rem;
   }
 
   .tagline {
